# gannon-storm-rtk-analysis

./: .gitignore  CHANGELOG.md  CITATION.cff  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
blog-post/: 2026-05-17-when-the-sky-stopped-the-tractors.md
docs/: index.md  methodology.md
notebooks/: 01-fetch-cors-data.ipynb  02-positioning-solutions.ipynb  03-correlate-swpc.ipynb
results/: quantitative.md
src/gannon_analysis/: __init__.py  analysis.py  fetch.py  plotting.py  positioning.py  stations.py  swpc.py
tests/: conftest.py  test_analysis.py  test_fetch.py  test_positioning.py  test_smoke.py  test_stations.py  test_swpc.py
tests/fixtures/: kp_fixture.txt
