        [build-system]
        requires = ["hatchling>=1.21"]
        build-backend = "hatchling.build"

        [project]
        name = "gannon-storm-rtk-analysis"
        description = "Retrospective analysis of RTK-GNSS positioning error during the May 10-12, 2024 Gannon G5 superstorm. Pulls NGS CORS RINEX for Iowa, Illinois, Indiana, and Ohio; computes per-station positioning error envelopes and correlates with NOAA SWPC indices and proton flux. Reproducible notebooks + blog post + result figures."
        readme = "README.md"
        requires-python = ">=3.11"
        license = { text = "Apache-2.0" }
        authors = [
            { name = "Thomas Waweru", email = "t.waweru@577industries.com" },
            { name = "577 Industries Inc.", email = "engineering@577industries.com" },
        ]
        keywords = ["heliophysics", "space-weather", "ml", "provenance", "fusion"]
        classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Typing :: Typed",
]
        dynamic = ["version"]
        dependencies = [
            "pydantic>=2.6",
            "httpx>=0.27",
            "pandas>=2.2",
            "numpy>=1.26",
            "python-dateutil>=2.9",
            "matplotlib>=3.8",
            "georinex>=1.16",
        ]

        [project.optional-dependencies]
        dev = [
            "ruff>=0.4",
            "mypy>=1.10",
            "pytest>=8.2",
            "pytest-cov>=5.0",
            "pytest-asyncio>=0.23",
            "hypothesis>=6.100",
            "pre-commit>=3.7",
            "detect-secrets>=1.5",
        ]
        docs = [
            "mkdocs>=1.6",
            "mkdocs-material>=9.5",
            "mkdocstrings[python]>=0.25",
        ]
        # cartopy has system C-deps (PROJ, GEOS) and is intentionally optional.
        # Install with `pip install '.[maps]'` when those libs are available.
        maps = [
            "cartopy>=0.23",
        ]

        [project.urls]
        Homepage = "https://github.com/577Industries/gannon-storm-rtk-analysis"
        Repository = "https://github.com/577Industries/gannon-storm-rtk-analysis.git"
        Issues = "https://github.com/577Industries/gannon-storm-rtk-analysis/issues"
        Documentation = "https://577industries.github.io/gannon-storm-rtk-analysis"

        [tool.hatch.version]
        path = "src/gannon_analysis/__init__.py"

        [tool.hatch.build.targets.wheel]
        packages = ["src/gannon_analysis"]

        [tool.ruff]
        line-length = 100
        target-version = "py311"

        [tool.ruff.lint]
        select = [
            "E",   # pycodestyle errors
            "W",   # pycodestyle warnings
            "F",   # pyflakes
            "I",   # isort
            "UP",  # pyupgrade
            "B",   # flake8-bugbear
            "SIM", # flake8-simplify
            "ARG", # unused arguments
            "PTH", # use pathlib
            "RUF", # ruff-specific
        ]
        ignore = ["E501"]  # line length handled by formatter

        [tool.ruff.lint.per-file-ignores]
        "tests/**/*" = ["ARG", "B"]

        [tool.mypy]
        python_version = "3.11"
        strict = true
        warn_return_any = true
        warn_unused_configs = true
        disallow_untyped_defs = true
        disallow_incomplete_defs = true
        check_untyped_defs = true
        ignore_missing_imports = true
        files = ["src"]

        [tool.pytest.ini_options]
        minversion = "8.0"
        addopts = "-ra --strict-markers --cov=gannon_analysis --cov-report=term-missing --cov-report=xml -m 'not integration'"
        testpaths = ["tests"]
        asyncio_mode = "auto"
        markers = [
            "integration: tests that hit live network endpoints (NGS CORS / GFZ / Kyoto). Skipped by default in CI; run via `pytest -m integration`.",
        ]

        [tool.coverage.run]
        branch = true
        source = ["src/gannon_analysis"]

        [tool.coverage.report]
        exclude_lines = [
            "pragma: no cover",
            "raise NotImplementedError",
            "if TYPE_CHECKING:",
            "if __name__ == .__main__.:",
        ]
